<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hypothermia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asd.medicalapp.Hypothermia"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Diabetes"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diabetescondition"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/signtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/signandsymptom"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/signvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diabetescondition"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/firstaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstaid"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/firstaidvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/diabetesfirstaid"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
