<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_disease"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.asd.medicalapp.DiseaseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hypothermia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/hypothermia"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorAccent"></View>

            <TextView
                android:id="@+id/heatstroke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/heatstroke"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorAccent"></View>

            <TextView
                android:id="@+id/heartattack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/heartattack"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorAccent"></View>

            <TextView
                android:id="@+id/diabetes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Diabetes"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorAccent"></View>

            <TextView
                android:id="@+id/seizures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Seizures"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorAccent"></View>

            <TextView
                android:id="@+id/asthama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Asthma"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorAccent"></View>

            <TextView
                android:id="@+id/triggers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/triggers"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

            <View
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorAccent"></View>

            <TextView
                android:id="@+id/roadaccident"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/roadaccident"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>

            <View
                android:id="@+id/view8"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorAccent"></View>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
